navigation sass. added fixed for username position on tablet and phone

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -519,7 +519,7 @@ a.dashboard-button{
 	@include media-breakpoint-only(tablet) {
 		position: absolute;
     	top: 45px;
-    	right: 40px;
+    	right: 50px;
 
 	 	&:hover,
 		&:focus {
@@ -555,7 +555,7 @@ a.dashboard-button{
 	    border-left: .3em solid transparent;
 
 	    @include media-breakpoint-only(tablet) {
-			top:-32px;
+			top:-29px;
 		}
 		@include media-breakpoint-down(landscape_phone) {
 			
@@ -577,7 +577,7 @@ a.dashboard-button{
 	    z-index: 10;
 
 	   	 @include media-breakpoint-only(tablet) {
-	   	 	top: 0px!important;
+	   	 	top: 1px!important;
 	   	 }
 	   	 @include media-breakpoint-down(landscape_phone) {
 	   	 	top: 78px!important;
@@ -588,7 +588,7 @@ a.dashboard-button{
 	    	margin-top: -3px;
 
 	    	@include media-breakpoint-down(landscape_phone) {
-	    		margin-top: -8px;
+	    		margin-top: -5px;
 	    	}
 	    }
 	    &:after {
